# gst-loop2rtmp

./: .gitignore  CMakeLists.txt  Makefile  app.c
cmake/: FindGObject.cmake  FindGStreamer.cmake  FindGlib2.cmake
